desktop/css/style.css
html {
  font-size: 13px;
  height: 100%;
  min-height: 700px;
}

/* a {
  color: #00B7FF;
} */

.toolbar {
  background: gainsboro;
}

.statusbar {
  background: gainsboro;
}

/* #turtle_canvas {
  border: 1px solid coral;
} */

#turtle_code {
  width: 100%; 
  height: 100%; 
}

.name-li {
  background: black;
  margin: 1px;
  padding: 5px;
  cursor: pointer;
}

.name-li.selected {
  background: dimgray;
}

#turtle_list {
  list-style-type: none;
  margin: 1px;
  padding: 1px;
}

#object_code {
  font-family: monospace;
  max-height: 800px;
  overflow-y: auto;
  overflow-x: visible;
  color: red;
  font-size: 0.85em;
}

.header {
  text-align: center;
  /* border-bottom: 1px solid lightgray; */
  margin: 2px;
  padding: 1px;
}

#turtle_canvas_container {
  flex: 80%;
  max-height: 80%;
}

#turtle_console_container {
  flex: 20%;
  max-height: 20%;
  overflow: auto;
  background: lightgray;
  color: green;
}

html, body, div {
  box-sizing: border-box;
}

#turtle_console {

  max-height: inherit;
}

